Fixing layout issues with icons in success welcome screen.

--- a/src/less/login-angular.less
+++ b/src/less/login-angular.less
@@ -40,7 +40,7 @@
         margin-right: 1.875rem;
         svg {
           width: 13rem;
-          height: 12rem;
+          height: 12.3rem;
         }
       }
       .btn-primary {
